Remove unused methods, class. Use StandardCharsets.UTF_8 when encoding